Fix vertical overflow on the mobile register screen

--- a/res/css/structures/auth/_MobileRegistration.pcss
+++ b/res/css/structures/auth/_MobileRegistration.pcss
@@ -7,4 +7,6 @@ Please see LICENSE files in the repository root for full details.
 
 .mx_MobileRegister_body {
     padding: 32px;
+    height: 100vh;
+    overflow-y: auto;
 }
